2008-12-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-ps.c: minor cleanup.

2008-12-03  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactiongroup.[ch]: added an extra parameter for
	the translation context to all gimp_action_group_add methods.

	* app/actions/*.c: added a translation context to all action
	labels. Also unified and improved the labels and tooltips in a few
	places.
	
2008-12-03  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactiongroup.c: check that the action name is
	unique before adding it to a GimpActionGroup.

2008-12-03  Sven Neumann  <sven@gimp.org>

	* app/core/gimpitem.c (gimp_item_get_offset_node): use
	"gegl:translate" instead of "gegl:shift".

2008-12-03  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagemap.c: renamed GeglNode shift to translate.
	Use "gegl:translate" instead of "gegl:shift".

2008-12-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-desktop-link.c: use the G_KEY_FILE_DESKTOP
	defines from GLib.

2008-12-01  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.def: added gimp_widgets_error_quark.

2008-12-01  Martin Nordholts  <martinn@svn.gnome.org>

	* libgimpwidgets/gimpwidgets-error.h: Added 'Since: GIMP 2.8' to
	GIMP_WIDGETS_ERROR.

	* libgimpwidgets/gimpwidgets.h: Added gimpwidgets-error.h.

2008-11-30  Martin Nordholts  <martinn@svn.gnome.org>

	* libgimpwidgets/gimpwidgets-error.[ch]: New files defining
	GIMP_WIDGETS_ERROR domain with currently only a
	GIMP_WIDGETS_PARSE_ERROR error code.

	* libgimpwidgets/Makefile.am: Add the new files here.

2008-11-27  Sven Neumann  <sven@gimp.org>

	Bug 562459 – PF_PALETTE: 'TypeError' when used in a plugin that is
	registered in <Image>

	* plug-ins/pygimp/gimpui.defs (gimp_palette_select_button_new):
	the 'title' parameter is optional.

2008-11-27  Michael Natterer  <mitch@gimp.org>

	Bug 562427 – Compilation with --as-needed

	* app/Makefile.am (gimp_console_2_7_LDADD): add $(GLIB_LIBS) so
	libgthread gets pulled in explicitely.
